--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ DerivedData/
 *.xcscmblueprint
 *.cer
 *.xcuserstate
-MultiTask.xcodeproj/project.xcworkspace/xcuserdata/rightmeow.xcuserdatad/UserInterfaceState.xcuserstate
+MultiTask.xcodeproj/project.xcworkspace/xcuserdata/rightmeow.xcuserdatad/
 
 ## Obj-C/Swift specific
 *.hmap
