removed fastlane from git

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,11 @@ Carthage
 # screenshots whenever they are needed.
 # For more information about the recommended setup visit:
 # https://docs.fastlane.tools/best-practices/source-control/#source-control
+#
+# The whole fastlane directory should be ignored when repo becomes public.
 
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+fastlane/
+# fastlane/report.xml
+# fastlane/Preview.html
+# fastlane/screenshots
+# fastlane/test_output
