--- a/MultiTask/Info.plist
+++ b/MultiTask/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Saving sketches into Photo</string>
 	<key>AWS</key>
 	<dict>
 		<key>Cognito</key>
